--- a/main.html
+++ b/main.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+	<h1>Time, Space, Complexity</h1>
+	<p>	Time complexity, efficient</p>
+	<p>	Space Complexity, O(n)</p>
+	<b>Space Complexity</b>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
